Fix layout issue in Mozilla browsers when layout is centered vertically

--- a/src/main/webapp/resources/sass/app/_general.scss
+++ b/src/main/webapp/resources/sass/app/_general.scss
@@ -237,6 +237,7 @@ code {
 	max-width: 720px;
 	margin-left: auto;
 	margin-right: auto;
+	width: 100%;
 }
 
 .x-msgbox {
